--- a/index.html
+++ b/index.html
@@ -105,6 +105,84 @@
                 <p>List skill/technologies <br> here. You can change the <br> icon above to any of the <br> 1500+ FontAwesome 5 <br> free icons available. <br> Aenean commodo ligula <br> eget dolor.</p>
             </div>
         </section>
+
+        <section class="resume">
+            <div class="resume-content">
+                <div class="resume-header">
+                    <h1>A summary of My Resume</h1>
+                </div>
+                <div class="resume-sub-header dark-2">
+                    <div class="edu-sec-1">
+                        <h1>My Education</h1>
+                    </div>
+                    <div class="edu-sec-2">
+                        <h1>My Experience</h1>
+                    </div>
+                </div>
+                <div class="resume-items">
+                    <div class="resume-item-1">
+                        <div class="edu">
+                            <h1>Master in Computer Engineering</h1>
+                            <h3>Harvard University / 2015 - 2017</h3>
+                            <p>List skill/technologies here. You can change the icon above <br> 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean <br> commodo ligula eget dolor.</p>
+                            <hr>
+                        </div>
+
+                        <div class="edu">
+                            <h1>Master in Computer Engineering</h1>
+                            <h3>Harvard University / 2015 - 2017</h3>
+                            <p>List skill/technologies here. You can change the icon above <br>
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean <br> commodo ligula eget dolor.</p>
+                            <hr>
+                        </div>
+
+
+                        <div class="edu">
+                            <h1>Master in Computer Engineering</h1>
+                            <h3>Harvard University / 2015 - 2017</h3>
+                            <p>List skill/technologies here. You can change the icon above <br>
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean <br> commodo ligula eget dolor.</p>
+                            <hr>
+                        </div>
+
+
+                    </div>
+
+                    <div class="resume-item-2">
+                        <div class="exp">
+                            <h1>Sr. Font End Developer</h1>
+                            <h3>Apple Inc / 2020 - Current</h3>
+                            <p>List skill/technologies here. You can change the icon above <br> 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean <br> commodo ligula eget dolor.</p>
+                            <hr>
+                        </div>
+
+                        <div class="exp">
+                            <h1>Sr. Font End Developer</h1>
+                            <h3>Apple Inc / 2020 - Current</h3>
+                            <p>List skill/technologies here. You can change the icon above <br> 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            <hr>
+                        </div>
+
+
+
+                        <div class="exp">
+                            <h1>Sr. Font End Developer</h1>
+                            <h3>Apple Inc / 2020 - Current</h3>
+                            <p>List skill/technologies here. You can change the icon above <br> 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean <br> commodo ligula eget dolor.</p>
+                            <hr>
+                        </div>
+
+
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
